--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "stylelint": "^7.4.0",
+    "stylelint-config-standard": "^13.0.2",
     "systemjs": "0.19.39",
     "zone.js": "^0.6.25"
   },
@@ -37,6 +39,6 @@
     "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
-    "typings":"^1.4.0"
+    "typings": "^1.4.0"
   }
 }
